==> zhongchun233/Industrial-gateway-based-on-ptp/Lower_computer/APP/Letter_shell/demo/stm32-freertos/shell_port.c <==
/**
 * @file shell_port.c
 * @author Letter (NevermindZZT@gmail.com)
 * @brief 
 * @version 0.1
 * @date 2019-02-22
 * 
 * @copyright (c) 2019 Letter
 * 
 */

#include "FreeRTOS.h"
#include "task.h"
#include "shell.h"
#include "shell_port.h"
#include "stm32H7xx_hal.h"
#include "usart.h"
#include "semphr.h"  
//#include "cevent.h"
Shell shell;
char shellBuffer[512];

static SemaphoreHandle_t shellMutex;

/**
 * @brief 用户shell写
 * 
 * @param data 数据
 * @param len 数据长度
 * 
 * @return short 实际写入的数据长度
 */
short userShellWrite(char *data, unsigned short len)
{
    HAL_UART_Transmit(&debugSerial, (uint8_t *)data, len, 0x1FF);
    return len;
}

short userShellRead(char *data, unsigned short len)
{
	  HAL_StatusTypeDef status = HAL_UART_Receive(&debugSerial, (uint8_t *)data, len, 0XFFFF);
    if (status == HAL_OK) {
        return len;
    } else{
        return 0;
    }

}
/**
 * @brief 用户shell上锁
 * 
 * @param shell shell
 * 
 * @return int 0
 */
int userShellLock(Shell *shell)
{
    xSemaphoreTakeRecursive(shellMutex, portMAX_DELAY);
    return 0;
}

/**
 * @brief 用户shell解锁
 * 
 * @param shell shell
 * 
 * @return int 0
 */
int userShellUnlock(Shell *shell)
{
    xSemaphoreGiveRecursive(shellMutex);
    return 0;
}

/**
 * @brief 用户shell初始化
 * 
 */
void userShellInit(void)
{
    shellMutex = xSemaphoreCreateMutex();

    shell.write = userShellWrite;
    shell.read = userShellRead;
    shell.lock = userShellLock;
    shell.unlock = userShellUnlock;
    shellInit(&shell, shellBuffer, 512);
    if (xTaskCreate(shellTask, "shell", 256, &shell, 1, NULL) != pdPASS)
    {
//        logError("shell task creat failed");
    }
}
//CEVENT_EXPORT(EVENT_INIT_STAGE2, userShellInit);
